--- a/timelineslider_demo.html
+++ b/timelineslider_demo.html
@@ -42,15 +42,15 @@ $(function() {
 </head>
 <body style="padding: 10px;">
 	<div style="width: 100%; height: 100%; min-width: 1000px;">
-		<a href="#" onclick="javascript:$('#timelineslider').timelineSlider('values',{from:33,to:36});">Click me to go to another period</a>
-		<br />
-		<br />
 		<div id="timelineslidercontainer" style="padding: 50px;">
 			<div id="timelineslider">
-				<!-- <div id="zoomin">zoomin</div>
-				<div id="zoomout">zoomout</div>
-				<div id="scrollleft">scrollleft</div>
-				<div id="scrollright">scrollright</div> -->
+				<div style="position:absolute;top:50px;">
+					<a href="#" onclick="javascript:$('#timelineslider').timelineSlider('values',{from:33,to:36});">Click me to go to another period</a>&nbsp;|&nbsp;
+					<span id="zoomin">+&nbsp;zoomin</span>&nbsp;|&nbsp;
+					<span id="zoomout">-&nbsp;zoomout</span>&nbsp;|&nbsp;
+					<span id="scrollleft">&larr;&nbsp;scrollleft</span>&nbsp;|&nbsp;
+					<span id="scrollright">&rarr;&nbsp;scrollright</span>
+				</div>
 			</div>
 		</div>
 	</div>
