Added zoomlevel getter and setter, removed overhead comments

--- a/timelineslider_demo.html
+++ b/timelineslider_demo.html
@@ -21,7 +21,7 @@ $(function() {
 			periods : data.periods,
 			from : data.from,
 			to : data.to,
-			zoom : 2,
+			zoomlevel : 2,
 			minzoom : 1,
 			maxzoom : 10,
 			zoomspeed : 0.1,
