fixed some ie8 styling issues and added auto-center on window resize.

--- a/timelineslider_demo.html
+++ b/timelineslider_demo.html
@@ -4,6 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>jQuery Timelineslider demo</title>
+<link rel="stylesheet" type="text/css" href="css/reset.css" />
 <link rel="stylesheet" type="text/css" href="css/timelineslider.css" />
 <!--[if IE]><link rel="stylesheet" type="text/css" href="css/timelineslider-ie.css" /><![endif]-->
 <script src="js/jquery-1.4.4.min.js" type="text/javascript"></script>
